[package]
name = "nostalgia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
hyper = { version = "0.14", features = ["http1", "tcp", "server"] }
socket2 = "0.4.4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = { version = "0.4.12", features = ["limit", "util"] }
